--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
 	"linebreak-style": ["error", "unix"],
 	"no-cond-assign": ["error"],
 	"quotes": ["error", "single", { "avoidEscape": true }],
-	"semi": ["error", "always"]
+  "semi": ["error", "always"],
+  "indent": ["error", 2]
   }
 }
