--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "lint": "eslint --ignore-path .gitignore .",
-    "lint:fix": "eslint --ignore-path .gitignore . --fix",
+    "lint:fix": "eslint --ignore-path .gitignore . --fix"
   },
   "dependencies": {
     "faker": "4.1.0",
