--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,9 +1,6 @@
 name: pipeline
 
 on:
-  push:
-    branches:
-      - master
   pull_request:
     branches:
       - master
@@ -30,6 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: npm lint
     - run: npm test
       env:
         CI: true
