--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,7 @@ jobs:
     
     - name: Get image tag for push
       run: |
-        export TAG=${{ github.ref }}
-        echo "::set-env name=IMAGE_TAG::$TAG"
+        echo "::set-env name=IMAGE_TAG::${GITHUB_REF/refs\/tags\//}"
       if: github.event_name == 'create'
 
     - name: Build, tag, and push image to Amazon ECR
