--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,22 +34,24 @@ jobs:
     #   with:
     #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
     #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #     aws-region: us-east-1
+    #     aws-region: us-east-2
 
     # - name: Login to Amazon ECR
     #   id: login-ecr
     #   uses: aws-actions/amazon-ecr-login@v1
 
-    # - name: Get image tag for push
-    #   run: |
-    #     export SHA=${{ github.sha }}
-    #     echo "::set-env name=IMAGE_TAG::${SHA::6}"
-    #   if: github.event_name == 'push'
+    - name: Get image tag for push
+      run: |
+        export SHA=${{ github.sha }}
+        echo "::set-env name=IMAGE_TAG::${SHA::6}"
+        echo "::set-env name=DEPLOY_ENV::dev"
+      if: github.event_name == 'push'
     
-    # - name: Get image tag for tag
-    #   run: |
-    #     echo "::set-env name=IMAGE_TAG::${GITHUB_REF/refs\/tags\//}"
-    #   if: github.event_name == 'create'
+    - name: Get image tag for tag
+      run: |
+        echo "::set-env name=IMAGE_TAG::${GITHUB_REF/refs\/tags\//}"
+        echo "::set-env name=DEPLOY_ENV::prod"
+      if: github.event_name == 'create'
 
     # - name: Build, tag, and push image to Amazon ECR
     #   env:
@@ -62,13 +64,28 @@ jobs:
     # - name: Logout of Amazon ECR
     #   if: always()
     #   run: docker logout ${{ steps.login-ecr.outputs.registry }}
+
     - name: 'Terraform Init'
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: 0.12.13
         tf_actions_subcommand: 'init'
-        tf_actions_comment: true
+        tf_actions_working_dir: './terraform'
+        args: '-backend-config="bucket=asem-labs-${{ env.DEPLOY_ENV }}"'
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        TF_VAR_env_name: ${{ env.DEPLOY_ENV }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
+    
+    - name: 'Terraform Apply'
+      uses: hashicorp/terraform-github-actions@master
+      with:
+        tf_actions_version: 0.12.13
+        tf_actions_subcommand: 'apply'
+        tf_actions_working_dir: './terraform'
+        args: '-auto-approve -var-file="vars/${{ env.DEPLOY_ENV }}.tfvars"'
+      env:
+        TF_VAR_env_name: ${{ env.DEPLOY_ENV }}
+        TF_VAR_image_tag: f7c17f
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
