--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,13 @@
 name: deploy
 
-on:
-  push:
-    branches:
-      - master
-      - release-
-  create:
-    tags:
-      - v*
+on: pull_request
+  # push:
+  #   branches:
+  #     - master
+  #     - release-
+  # create:
+  #   tags:
+  #     - v*
 
 jobs:
   build:
@@ -70,32 +70,34 @@ jobs:
         tf_actions_version: 0.12.13
         tf_actions_subcommand: 'init'
         tf_actions_working_dir: './terraform'
-        args: '-backend-config="bucket=asem-labs-${{ env.DEPLOY_ENV }}"'
+        args: '-backend-config="bucket=asem-labs-dev"'
       env:
-        TF_VAR_env_name: ${{ env.DEPLOY_ENV }}
+        TF_VAR_env_name: dev
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
     
-    - name: 'Terraform Plan'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 0.12.13
-        tf_actions_subcommand: 'plan'
-        tf_actions_working_dir: './terraform'
-        args: '-backend-config="bucket=asem-labs-${{ env.DEPLOY_ENV }}"'
-      env:
-        TF_VAR_env_name: ${{ env.DEPLOY_ENV }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
-
-    # - name: 'Terraform Apply'
+    # - name: 'Terraform Plan'
     #   uses: hashicorp/terraform-github-actions@master
     #   with:
     #     tf_actions_version: 0.12.13
-    #     tf_actions_subcommand: 'apply'
+    #     tf_actions_subcommand: 'plan'
     #     tf_actions_working_dir: './terraform'
-    #     args: '-backend-config="bucket=asem-labs-${{ env.DEPLOY_ENV }}", -auto-approve'
+    #     args: '-backend-config="bucket=asem-labs-${{ env.DEPLOY_ENV }}"'
     #   env:
     #     TF_VAR_env_name: ${{ env.DEPLOY_ENV }}
     #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
+
+    - name: 'Terraform Apply'
+      uses: hashicorp/terraform-github-actions@master
+      with:
+        tf_actions_version: 0.12.13
+        tf_actions_subcommand: 'apply'
+        tf_actions_working_dir: './terraform'
+        tf_actions_comment: true
+        args: '-auto-aprove'
+      env:
+        TF_VAR_env_name: dev
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
